--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "Chart.Annotation.js",
+  "name": "chartjs-plugin-annotation",
   "description": "Annotations for Chart.js",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "license": "MIT",
   "main": "src/chart.annotation.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chartjs/Chart.Annotation.js.git"
+    "url": "https://github.com/chartjs/chartjs-plugin-annotation.git"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
