--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Annotations for Chart.js",
   "version": "0.4.0",
   "license": "MIT",
-  "main": "src/chart.annotation.js",
+  "main": "chartjs-plugin-annotation.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/chartjs/chartjs-plugin-annotation.git"
