Rewrote the annotation update handler, bugfixes
* Fixes a bug where calling `chartInstance.update()` broke the referential integrity of the annotations, preventing further updates
* Fixes a bug where the `hovering` element flag was getting reset when calling `chartInstance.update()` from inside the `onMouseover` handler
* Annotations now use an unambiguous unique ID rather than an array index to map configs to element instances
* Properly hooked in the scale adjuster using the `afterDataLimits` scale option
* Refactored the plugin object to its own file
* Refactored helpers.js to use a consistent module format
* Pointed the `main` property in `package.json` back to the `src` directory to deal with Webpack warnings
* Tighter plugin code and var names

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Annotations for Chart.js",
   "version": "0.5.1",
   "license": "MIT",
-  "main": "chartjs-plugin-annotation.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/chartjs/chartjs-plugin-annotation.git"
@@ -27,6 +27,6 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "chart.js": "^2.1.0"
+    "chart.js": "^2.4.0"
   }
 }
