--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "devDependencies": {
     "browserify": "^16.2.3",
     "eslint-config-chartjs": "^0.1.0",
+    "eslint-plugin-html": "^5.0.0",
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^5.0.0",
+    "gulp-htmllint": "^0.0.16",
     "gulp-insert": "^0.5.0",
     "gulp-jshint": "^2.1.0",
     "gulp-replace": "^1.0.0",
