add github package config.

--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
   },
   "peerDependencies": {
     "chart.js": "^2.4.0"
-  }
+  },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
