--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "chart.js": "^3.0.0-beta",
-    "eslint": "^7.8.1",
+    "chart.js": "^3.0.0-beta.4",
+    "eslint": "^7.11.0",
     "eslint-config-chartjs": "^0.2.0",
     "eslint-config-esnext": "^4.1.0",
-    "eslint-plugin-html": "^6.0.3",
+    "eslint-plugin-html": "^6.1.0",
     "rollup-plugin-chartjs-globals": "^0.1.1",
-    "rollup-plugin-terser": "^7.0.1"
+    "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
-    "chart.js": "^3.0.0-beta"
+    "chart.js": "^3.0.0-beta.4"
   },
   "dependencies": {
     "rollup": "^2.26.9"
