--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "build": "rollup -c",
-    "lint": "eslint samples/**/*.html src/**/*.js **/*.md",
+    "lint": "eslint samples/**/*.html src/**/*.js",
     "test": "npm run lint"
   },
   "devDependencies": {
