--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
     "eslint-config-chartjs": "^0.2.0",
     "eslint-config-esnext": "^4.1.0",
     "eslint-plugin-html": "^6.1.0",
+    "rollup": "^2.32.1",
     "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
     "chart.js": "^3.0.0-beta.4"
   },
-  "dependencies": {
-    "rollup": "^2.26.9"
-  }
+  "dependencies": {}
 }
