--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "0.5.7",
   "author": "Evert Timberg <evert.timberg@gmail.com>",
   "license": "MIT",
-  "main": "src/index.js",
+  "main": "dist/chartjs-plugin-annotation.js",
+  "files": [
+    "dist/*.js"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/chartjs/chartjs-plugin-annotation.git"
