--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master, next ]
+    branches: [ master, v2 ]
   pull_request:
-    branches: [ master, next ]
+    branches: [ master, v2 ]
 
 jobs:
   build:
