--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,24 @@
 
+# Deployment
+/coverage
+/custom
+/dist
+/gh-pages
+
+# Node.js
+node_modules/
+npm-debug.log*
+
+# Development
 .DS_Store
-
-node_modules/*
-custom/*
-dist/*
-
-docs/index.md
-
-bower_components/
-
-coverage/*
-
-nbproject/*
-
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.idea
+.project
+.settings
 .vscode
+*.log
+*.swp
+*.stackdump
