--- a/package.json
+++ b/package.json
@@ -11,25 +11,30 @@
     "url": "https://github.com/chartjs/chartjs-plugin-annotation.git"
   },
   "files": [
-    "dist/*.js"
+    "dist/*.js",
+    "types/*.d.ts"
   ],
   "scripts": {
     "build": "rollup -c",
     "lint": "eslint samples/**/*.html src/**/*.js",
-    "test": "npm run lint"
+    "test": "concurrently \"npm:test-*\"",
+    "test-types": "tsc -p types/test/",
+    "test-lint": "npm run lint"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.0.1",
     "chart.js": "^3.0.0-beta.7",
+    "concurrently": "^5.3.0",
     "eslint": "^7.15.0",
     "eslint-config-chartjs": "^0.2.0",
     "eslint-config-esnext": "^4.1.0",
     "eslint-plugin-html": "^6.1.1",
     "rollup": "^2.35.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^4.0.5"
   },
   "peerDependencies": {
-    "chart.js": "^3.0.0-beta.4"
+    "chart.js": "^3.0.0-beta.6"
   },
   "dependencies": {}
 }
