--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,17 +1,32 @@
 
 extends:
   - chartjs
-  - esnext
+  - plugin:es/no-2019
+
+env:
+  es6: true
+  browser: true
+  node: true
 
 parserOptions:
-  ecmaVersion: 7
+  ecmaVersion: 2018
   sourceType: module
   ecmaFeatures:
     impliedStrict: true
     modules: true
 
-env:
-  browser: true
-  node: true
+plugins: ['html', 'es']
 
-plugins: ['html']
+rules:
+  class-methods-use-this: "off"
+  complexity: ["warn", 10]
+  max-statements: ["warn", 30]
+  no-empty-function: "off"
+  no-use-before-define: ["error", { "functions": false }]
+  # disable everything, except Rest/Spread Properties in ES2018
+  es/no-async-iteration: "error"
+  es/no-malformed-template-literals: "error"
+  es/no-regexp-lookbehind-assertions: "error"
+  es/no-regexp-named-capture-groups: "error"
+  es/no-regexp-s-flag: "error"
+  es/no-regexp-unicode-property-escapes: "error"
