--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "chart.js": "^3.0.0-beta.7",
     "concurrently": "^5.3.0",
-    "eslint": "^7.15.0",
+    "eslint": "^7.16.0",
     "eslint-config-chartjs": "^0.2.0",
-    "eslint-config-esnext": "^4.1.0",
     "eslint-plugin-html": "^6.1.1",
     "rollup": "^2.35.1",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "chart.js": "^3.0.0-beta.6"
   },
-  "dependencies": {}
+  "dependencies": {
+    "eslint-plugin-es": "^4.1.0"
+  }
 }
