--- a/package.json
+++ b/package.json
@@ -16,26 +16,38 @@
   ],
   "scripts": {
     "build": "rollup -c",
+    "dev": "karma start --auto-watch --no-single-run --browsers chrome --grep",
     "lint": "eslint samples/**/*.html src/**/*.js",
     "test": "concurrently \"npm:test-*\"",
     "test-types": "tsc -p types/test/",
-    "test-lint": "npm run lint"
+    "test-lint": "npm run lint",
+    "test-karma": "karma start --auto-watch --single-run --coverage --grep"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "chart.js": "^3.0.0-beta.7",
+    "chartjs-test-utils": "^0.1.0",
     "concurrently": "^5.3.0",
     "eslint": "^7.16.0",
     "eslint-config-chartjs": "^0.2.0",
+    "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-html": "^6.1.1",
+    "karma": "^5.2.3",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
+    "karma-firefox-launcher": "^2.1.0",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-rollup-preprocessor": "^7.0.5",
+    "pixelmatch": "^5.2.1",
     "rollup": "^2.35.1",
+    "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
-    "chart.js": "^3.0.0-beta.6"
+    "chart.js": "^3.0.0-beta.7"
   },
-  "dependencies": {
-    "eslint-plugin-es": "^4.1.0"
-  }
+  "dependencies": {}
 }
