Remove leftover double dash

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "rollup -c",
     "dev": "karma start --auto-watch --no-single-run --browsers chrome",
     "lint": "eslint samples/**/*.html test/**/*.js src/**/*.js",
-    "test": "cross-env NODE_ENV=test concurrently \"npm:test-*\" --",
+    "test": "cross-env NODE_ENV=test concurrently \"npm:test-*\"",
     "test-types": "tsc -p types/test/",
     "test-lint": "npm run lint",
     "test-karma": "karma start --auto-watch --single-run"
