--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chartjs-plugin-annotation",
   "description": "Annotations for Chart.js",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0-beta.3",
   "author": "Evert Timberg <evert.timberg@gmail.com>",
   "license": "MIT",
   "main": "dist/chartjs-plugin-annotation.js",
@@ -17,23 +17,24 @@
   ],
   "scripts": {
     "build": "rollup -c",
-    "dev": "karma start --auto-watch --no-single-run --browsers chrome --grep",
+    "dev": "karma start --auto-watch --no-single-run --browsers chrome",
     "lint": "eslint samples/**/*.html test/**/*.js src/**/*.js",
-    "test": "concurrently \"npm:test-*\"",
+    "test": "cross-env NODE_ENV=test concurrently \"npm:test-*\"",
     "test-types": "tsc -p types/test/",
     "test-lint": "npm run lint",
-    "test-karma": "karma start --auto-watch --single-run --coverage --grep"
+    "test-karma": "karma start --auto-watch --single-run"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.0.1",
-    "chart.js": "^3.0.0-beta.7",
+    "chart.js": "^3.0.0-beta.8",
     "chartjs-test-utils": "^0.1.1",
     "concurrently": "^5.3.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.17.0",
     "eslint-config-chartjs": "^0.3.0",
     "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-html": "^6.1.1",
-    "karma": "^5.2.3",
+    "karma": "^6.0.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-firefox-launcher": "^2.1.0",
@@ -41,7 +42,7 @@
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-rollup-preprocessor": "^7.0.5",
     "pixelmatch": "^5.2.1",
-    "rollup": "^2.35.1",
+    "rollup": "^2.36.1",
     "rollup-plugin-istanbul": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.1.3"
