Run eslint in the CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
       uses: actions/setup-node@v1
     - run: |
         npm ci
+        npm run lint
         npm run build
         if [ "${{ runner.os }}" == "Windows" ]; then
           npm test
