--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -14,11 +14,11 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: '12.x'    
+      - name: Test Build
         run: |
-          cd docs
           npm ci
-          npm run build
+          npm run build      
   gh-release:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
@@ -27,26 +27,13 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - name: Add key to allow access to repository
-        env:
-          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          echo "${{ secrets.GH_PAGES_DEPLOY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          cat <<EOT >> ~/.ssh/config
-          Host github.com
-          HostName github.com
-          IdentityFile ~/.ssh/id_rsa
-          EOT
       - name: Release to GitHub Pages
         env:
-          USE_SSH: true
-          GIT_USER: git
+          USE_SSH: false
+          GIT_USER: ${{ secrets.GH_AUTH_EMAIL }}
+          GIT_PASS: ${{ secrets.GH_AUTH_TOKEN }}
         run: |
-          git config --global user.email "actions@gihub.com"
-          git config --global user.name "gh-actions"
-          cd docs
+          git config --global user.email "${{ secrets.GH_AUTH_EMAIL }}"
+          git config --global user.name "Chart.js"
           npm ci
-          npx docusaurus deploy
+          npm run deploy
