--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -14,12 +14,14 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: '12.x'    
+          node-version: '12.x'
       - name: Test Build
         run: |
+          npm ci
+          npm run samples
           cd docs
           npm ci
-          npm run build      
+          npm run build
   gh-release:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
