--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "karma start --auto-watch --no-single-run --browsers chrome",
-    "lint": "eslint \"samples/**/*.html\" \"test/**/*.js\" \"src/**/*.js\"",
+    "samples": "npm run build && vuepress build samples --dest docs/static/samples",
+    "samples:dev": "npm run build && vuepress dev samples",
+    "lint": "eslint \"old_samples/**/*.html\" \"test/**/*.js\" \"src/**/*.js\"",
     "test": "cross-env NODE_ENV=test concurrently \"npm:test-*\"",
     "test-types": "tsc -p types/test/",
     "test-lint": "npm run lint",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.1.1",
     "chart.js": "^3.0.0-beta.13",
+    "chartjs-plugin-autocolors": "0.0.3",
     "chartjs-test-utils": "^0.1.2",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.3",
@@ -46,7 +49,10 @@
     "rollup": "^2.38.4",
     "rollup-plugin-istanbul": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "vue-prism-editor": "^1.2.2",
+    "vue2-perfect-scrollbar": "^1.5.0",
+    "vuepress": "^1.8.2"
   },
   "peerDependencies": {
     "chart.js": "^3.0.0-beta.13"
