--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -36,6 +36,8 @@ jobs:
           GIT_USER: chartjs-ci
           GIT_PASS: ${{ secrets.GH_AUTH_TOKEN }}
         run: |
+          npm ci
+          npm run samples
           cd docs
           git config --global user.email "${{ secrets.GH_AUTH_EMAIL }}"
           git config --global user.name "Chart.js"
