--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.2.0",
-    "chart.js": "^3.0.0-beta.13",
+    "chart.js": "^3.0.0-rc.3",
     "chartjs-plugin-autocolors": "0.0.3",
     "chartjs-test-utils": "^0.2.2",
-    "concurrently": "^5.3.0",
+    "concurrently": "^6.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.22.0",
     "eslint-config-chartjs": "^0.3.0",
     "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-html": "^6.1.2",
-    "karma": "^6.2.0",
+    "karma": "^6.3.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-firefox-launcher": "^2.1.0",
@@ -49,14 +49,14 @@
     "rollup": "^2.42.3",
     "rollup-plugin-istanbul": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.1.3",
+    "typescript": "^4.2.3",
     "vue-prism-editor": "^1.2.2",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuepress": "^1.8.2",
     "vuepress-plugin-redirect": "^1.2.5"
   },
   "peerDependencies": {
-    "chart.js": "^3.0.0-beta.13"
+    "chart.js": "^3.0.0-rc.3"
   },
   "dependencies": {}
 }
