--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "karma start --auto-watch --no-single-run --browsers chrome",
-    "samples": "npm run build && vuepress build samples --dest docs/static/samples",
-    "samples:dev": "npm run build && vuepress dev samples",
+    "docs": "npm run build && vuepress build docs --dest dist/docs",
+    "docs:dev": "npm run build && vuepress dev docs",
     "lint": "eslint \"old_samples/**/*.html\" \"test/**/*.js\" \"src/**/*.js\"",
     "test": "cross-env NODE_ENV=test concurrently \"npm:test-*\"",
     "test-types": "tsc -p types/test/",
@@ -28,31 +28,32 @@
     "test-karma": "karma start --auto-watch --single-run"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^11.1.1",
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "chart.js": "^3.0.0-beta.13",
     "chartjs-plugin-autocolors": "0.0.3",
-    "chartjs-test-utils": "^0.1.2",
+    "chartjs-test-utils": "^0.2.2",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.19.0",
+    "eslint": "^7.22.0",
     "eslint-config-chartjs": "^0.3.0",
     "eslint-plugin-es": "^4.1.0",
-    "eslint-plugin-html": "^6.1.1",
-    "karma": "^6.0.4",
+    "eslint-plugin-html": "^6.1.2",
+    "karma": "^6.2.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "karma-rollup-preprocessor": "^7.0.5",
+    "karma-rollup-preprocessor": "^7.0.7",
     "pixelmatch": "^5.2.1",
-    "rollup": "^2.38.4",
+    "rollup": "^2.42.3",
     "rollup-plugin-istanbul": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.1.3",
     "vue-prism-editor": "^1.2.2",
     "vue2-perfect-scrollbar": "^1.5.0",
-    "vuepress": "^1.8.2"
+    "vuepress": "^1.8.2",
+    "vuepress-plugin-redirect": "^1.2.5"
   },
   "peerDependencies": {
     "chart.js": "^3.0.0-beta.13"
