--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -27,9 +27,12 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+      - name: Build
+        run: |
+          npm ci
+          npm run docs
       - name: Release to GitHub Pages
-        uses: jenkey2011/vuepress-deploy@master
+        uses: peaceiris/actions-gh-pages@v3
         env:
-          ACCESS_TOKEN: ${{ secrets.GH_AUTH_TOKEN }}
-          BUILD_SCRIPT: npm ci && npm run docs
-          BUILD_DIR: dist/docs/
+          github_token: ${{ secrets.GH_AUTH_TOKEN }}
+          publish_dir: dist/docs
