--- a/package.json
+++ b/package.json
@@ -21,15 +21,20 @@
     "dev": "karma start --auto-watch --no-single-run --browsers chrome",
     "docs": "npm run build && vuepress build docs --dest dist/docs",
     "docs:dev": "npm run build && vuepress dev docs",
-    "lint": "eslint \"old_samples/**/*.html\" \"test/**/*.js\" \"src/**/*.js\"",
+    "lint": "concurrently \"npm:lint-*\"",
+    "lint-js": "eslint \"old_samples/**/*.html\" \"test/**/*.js\" \"src/**/*.js\"",
+    "lint-md": "markdownlint-cli2 \"**/*.md\" \"**/*.mdx\" \"#**/node_modules\"",
+    "lint-types": "eslint \"types/**/*.ts\" && tsc -p types/tests/",
     "test": "cross-env NODE_ENV=test concurrently \"npm:test-*\"",
-    "test-types": "tsc -p types/test/",
+    "test-types": "tsc -p types/tests/",
     "test-lint": "npm run lint",
     "test-karma": "karma start --auto-watch --single-run"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.2.0",
     "chart.js": "^3.0.0-rc.3",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "chartjs-plugin-autocolors": "0.0.3",
     "chartjs-test-utils": "^0.2.2",
     "concurrently": "^6.0.0",
@@ -45,6 +50,7 @@
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-rollup-preprocessor": "^7.0.7",
+    "markdownlint-cli2": "0.0.15",
     "pixelmatch": "^5.2.1",
     "rollup": "^2.42.3",
     "rollup-plugin-istanbul": "^3.0.0",
