--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "karma start --auto-watch --no-single-run --browsers chrome",
-    "docs": "npm run build && vuepress build docs --dest dist/docs",
-    "docs:dev": "npm run build && vuepress dev docs",
+    "docs": "npm run build && vuepress build docs --no-cache",
+    "docs:dev": "npm run build && vuepress dev docs --no-cache",
     "lint": "concurrently \"npm:lint-*\"",
     "lint-js": "eslint \"old_samples/**/*.html\" \"test/**/*.js\" \"src/**/*.js\"",
     "lint-md": "markdownlint-cli2 \"**/*.md\" \"**/*.mdx\" \"#**/node_modules\"",
@@ -52,16 +52,16 @@
     "karma-rollup-preprocessor": "^7.0.7",
     "markdownlint-cli2": "0.0.15",
     "pixelmatch": "^5.2.1",
-    "rollup": "^2.43.0",
+    "rollup": "^2.43.1",
     "rollup-plugin-istanbul": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.2.3",
     "vuepress": "^1.8.2",
     "vuepress-plugin-redirect": "^1.2.5",
-    "vuepress-theme-chartjs": "^0.1.0"
+    "vuepress-theme-chartjs": "^0.2.0"
   },
   "peerDependencies": {
-    "chart.js": "^3.0.0-rc.3"
+    "chart.js": "^3.0.0-rc.6"
   },
   "dependencies": {}
 }
