--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test-karma": "karma start --auto-watch --single-run"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
