--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
     "docs": "npm run build && vuepress build docs --no-cache",
     "docs:dev": "npm run build && vuepress dev docs --no-cache",
     "lint": "concurrently \"npm:lint-*\"",
-    "lint-js": "eslint \"old_samples/**/*.html\" \"test/**/*.js\" \"src/**/*.js\"",
+    "lint-js": "eslint \"docs/**/*.js\" \"test/**/*.js\" \"src/**/*.js\"",
     "lint-md": "markdownlint-cli2 \"**/*.md\" \"**/*.mdx\" \"#**/node_modules\"",
+    "lint-tsc": "tsc -p types/tests/",
     "lint-types": "eslint \"types/**/*.ts\" && tsc -p types/tests/",
-    "test": "cross-env NODE_ENV=test concurrently \"npm:test-*\"",
-    "test-types": "tsc -p types/tests/",
-    "test-lint": "npm run lint",
-    "test-karma": "karma start --auto-watch --single-run"
+    "test": "npm run lint && cross-env NODE_ENV=test karma start --auto-watch --single-run"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
