--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chartjs-plugin-annotation",
   "homepage": "https://www.chartjs.org/chartjs-plugin-annotation/index",
   "description": "Annotations for Chart.js",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "author": "Evert Timberg <evert.timberg@gmail.com>",
   "license": "MIT",
   "main": "dist/chartjs-plugin-annotation.js",
@@ -33,14 +33,14 @@
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "chart.js": "^3.1.0",
-    "chartjs-plugin-autocolors": "0.0.3",
+    "chartjs-plugin-autocolors": "^0.0.4",
     "chartjs-test-utils": "^0.3.0",
     "concurrently": "^6.0.2",
     "cross-env": "^7.0.3",
-    "eslint": "^7.24.0",
+    "eslint": "^8.2.0",
     "eslint-config-chartjs": "^0.3.0",
     "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-html": "^6.1.2",
