--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -11,10 +11,10 @@ jobs:
     if: github.event_name != 'push'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: 16
       - name: Test Build
         run: |
           npm ci
@@ -23,10 +23,10 @@ jobs:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: 16
       - name: Build
         run: |
           npm ci
