Add docs-config.sh to pull_request

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Test Build
         run: |
           npm ci
+          ./scripts/docs-config.sh master
           npm run docs
   gh-release:
     if: github.event_name == 'push'
