--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -31,3 +31,5 @@ rules:
   es/no-regexp-named-capture-groups: "error"
   es/no-regexp-s-flag: "error"
   es/no-regexp-unicode-property-escapes: "error"
+  linebreak-style: ["error", "unix"]
+ 
