--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
+        cache: npm
         node-version: 16
     - run: |
         npm ci
