--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
+        cache: npm
         node-version: 16
     - name: Test
       run: |
@@ -35,6 +36,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
+          cache: npm
           node-version: 16
           registry-url: https://registry.npmjs.org/
 
