--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "lint-md": "eslint \"**/*.md\"",
     "lint-types": "eslint \"types/**/*.ts\" && tsc -p types/tests/",
     "test": "cross-env NODE_ENV=test concurrently \"npm:test-*\"",
-    "test-types": "tsc -p types/tests/",
+    "test-integration": "mocha --full-trace test/integration/*-test.js",
+    "test-karma": "karma start --auto-watch --single-run",
     "test-lint": "npm run lint",
-    "test-karma": "karma start --auto-watch --single-run"
+    "test-types": "tsc -p types/tests/"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
@@ -47,6 +48,7 @@
     "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-markdown": "^2.0.1",
+    "fs-extra": "^10.0.0",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
@@ -54,6 +56,7 @@
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-rollup-preprocessor": "^7.0.7",
+    "mocha": "^9.1.3",
     "pixelmatch": "^5.2.1",
     "rollup": "^2.45.2",
     "rollup-plugin-istanbul": "^3.0.0",
