--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,12 +27,13 @@ jobs:
         npm ci
         npm run build
         if [ "${{ runner.os }}" == "Windows" ]; then
-          npm test
+          npm run lint
         else
           xvfb-run --auto-servernum npm test
         fi
       shell: bash
     - name: Coveralls Parallel - Chrome
+      if: runner.os != 'Windows'
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.github_token }}
@@ -40,6 +41,7 @@ jobs:
         flag-name: ${{ matrix.os }}-chrome
         parallel: true
     - name: Coveralls Parallel - Firefox
+      if: runner.os != 'Windows'
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.github_token }}
