--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-rollup-preprocessor": "^7.0.7",
+    "markdown-it-include": "^2.0.0",
     "mocha": "^9.1.3",
     "pixelmatch": "^5.2.1",
     "rollup": "^2.45.2",
