--- a/package.json
+++ b/package.json
@@ -62,10 +62,13 @@
     "rollup": "^2.45.2",
     "rollup-plugin-istanbul": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
+    "typedoc": "^0.23.8",
+    "typedoc-plugin-markdown": "^3.13.3",
     "typescript": "^4.2.4",
     "vuepress": "^1.8.2",
     "vuepress-plugin-flexsearch": "^0.3.0",
     "vuepress-plugin-redirect": "^1.2.5",
+    "vuepress-plugin-typedoc": "^0.10.0",
     "vuepress-theme-chartjs": "^0.2.0"
   },
   "peerDependencies": {
