--- a/package.json
+++ b/package.json
@@ -72,6 +72,6 @@
     "vuepress-theme-chartjs": "^0.2.0"
   },
   "peerDependencies": {
-    "chart.js": "^3.7.0"
+    "chart.js": ">=3.7.0"
   }
 }
