--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "author": "Evert Timberg <evert.timberg@gmail.com>",
   "license": "MIT",
   "type": "module",
-  "main": "dist/chartjs-plugin-annotation.esm.js",
+  "main": "dist/chartjs-plugin-annotation.cjs",
+  "module": "dist/chartjs-plugin-annotation.esm.js",
+  "types": "types/index.d.ts",
+
   "jsdelivr": "dist/chartjs-plugin-annotation.min.js",
   "unpkg": "dist/chartjs-plugin-annotation.min.js",
   "exports": {
     "types": "./types/index.d.ts",
     "import": "./dist/chartjs-plugin-annotation.esm.js",
-    "require": "./dist/chartjs-plugin-annotation.min.js"
+    "require": "./dist/chartjs-plugin-annotation.cjs",
+    "script": "./dist/chartjs-plugin-annotation.min.js"
   },
-  "types": "types/index.d.ts",
+  "sideEffects": false, 
   "repository": {
     "type": "git",
     "url": "https://github.com/chartjs/chartjs-plugin-annotation.git"
@@ -40,7 +44,7 @@
     "test-types-integration": "mocha --full-trace test/integration/*-test.js"
   },
   "devDependencies": {
-    "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-json": "^5.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.1.0",
     "@simonbrunel/vuepress-plugin-versions": "^0.2.0",
@@ -67,7 +71,7 @@
     "markdown-it-include": "^2.0.0",
     "mocha": "^9.1.3",
     "pixelmatch": "^5.2.1",
-    "rollup": "^3.3.0",
+    "rollup": "^3.7.0",
     "rollup-plugin-istanbul": "^4.0.0",
     "typedoc": "^0.23.8",
     "typedoc-plugin-markdown": "^3.13.3",
