--- a/package.json
+++ b/package.json
@@ -33,16 +33,13 @@
     "test-types-integration": "mocha --full-trace test/integration/*-test.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.2",
-    "@babel/preset-env": "^7.20.2",
-    "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-json": "^5.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.1.0",
     "@simonbrunel/vuepress-plugin-versions": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "babel-loader": "^8.3.0",
-    "chart.js": "^4.0.1",
+    "chart.js": "^4.1.1",
     "chartjs-plugin-autocolors": "^0.0.5",
     "chartjs-test-utils": "^0.5.0",
     "concurrently": "^7.0.0",
@@ -53,17 +50,17 @@
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-markdown": "^2.0.1",
     "fs-extra": "^10.0.0",
-    "karma": "^6.3.2",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.3",
-    "karma-firefox-launcher": "^2.1.0",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "karma-rollup-preprocessor": "^7.0.7",
     "markdown-it-include": "^2.0.0",
     "mocha": "^9.1.3",
     "pixelmatch": "^5.2.1",
-    "rollup": "^3.3.0",
+    "rollup": "^3.7.0",
     "rollup-plugin-istanbul": "^4.0.0",
     "typedoc": "^0.23.8",
     "typedoc-plugin-markdown": "^3.13.3",
@@ -72,8 +69,7 @@
     "vuepress-plugin-flexsearch": "^0.3.0",
     "vuepress-plugin-redirect": "^1.2.5",
     "vuepress-plugin-typedoc": "^0.10.0",
-    "vuepress-theme-chartjs": "^0.2.0",
-    "webpack": "^4.46.0"
+    "vuepress-theme-chartjs": "^0.2.0"
   },
   "peerDependencies": {
     "chart.js": ">=3.7.0"
